--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,37 +4,55 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{% block title %}{% endblock %}</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+        {#<title>{{ title }}</title>#}
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="{{ static('css/main.css') }}">
+        <link rel="stylesheet" href="{{ static('css/datepicker.css') }}">
+        <link rel="stylesheet" href="{{ static('css/bootstrap.css') }}">
+
+        <link rel="stylesheet" type="text/css" href="{{ static('css/bootstrap.css') }}" />
+        <link rel="stylesheet" type="text/css" href="{{ static('css/bootstrap-responsive.css') }}" />
+        <link rel="stylesheet" type="text/css" href="{{ static('css/datepicker.css') }}" />
+        <link rel="stylesheet" type="text/css" href="{{ static('css/imperio.css') }}" />
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
+        
+        <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+        <!--[if lt IE 9]>
+            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+
 </head>
 <body>
     <!--[if lt IE 7]>
         <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
     <![endif]-->
+    {% block body %}{% endblock %}
+    
+    <script src="{{ static('js/jquery.min.js') }}"></script>
+    <script src="{{ static('js/bootstrap-datepicker.js') }}"></script>
 
-    {% block body %}
-    {% endblock %}
+    <!-- include javascript, jQuery FIRST -->
+    <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>-->
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="{{ static('js/vendors/jquery-1.8.3.min.js') }}"><\/script>')</script>
+    <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>-->
+    <!--<script>window.jQuery || document.write('<script src="{{ static('js/vendors/jquery-1.8.3.min.js') }}"><\/script>')</script>-->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
+    <!--<script>
         var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
         (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
         g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
         s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script>
+    </script>-->
+
+
 
     <!-- build:js scripts/plugins.js -->
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-affix.js') }}"></script>
+    <!--<script src="{{ static('js/vendors/bootstrap/bootstrap-affix.js') }}"></script>
+    <script src="{{ static('js/bootstrap-datepicker.js') }}"></script>
     <script src="{{ static('js/vendors/bootstrap/bootstrap-alert.js') }}"></script>
     <script src="{{ static('js/vendors/bootstrap/bootstrap-dropdown.js') }}"></script>
     <script src="{{ static('js/vendors/bootstrap/bootstrap-tooltip.js') }}"></script>
@@ -46,7 +64,50 @@
     <script src="{{ static('js/vendors/bootstrap/bootstrap-carousel.js') }}"></script>
     <script src="{{ static('js/vendors/bootstrap/bootstrap-scrollspy.js') }}"></script>
     <script src="{{ static('js/vendors/bootstrap/bootstrap-collapse.js') }}"></script>
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-tab.js') }}"></script>
+    <script src="{{ static('js/vendors/bootstrap/bootstrap-tab.js') }}"></script>-->
+
+
+    <script type="text/javascript" src="{{ static('js/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ static('js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ static('js/jquery.validate.min.js') }}"></script>
+    {#<script type="text/javascript" src="{{ static('js/bootstrap-datepicker.js') }}"></script>#}
+    <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+    <script type="text/javascript" src="{{ static('js/bootstrap-colorpicker.js') }}"></script>
+    <script type="text/javascript" src="{{ static('js/imperio.general.js') }}"></script>
+    <script type="text/javascript" src="{{ static('js/imperio.forms.js') }}"></script>
+    
+    <!--<script type="text/javascript" src="{{ static('js/jquery.min.js') }}"></script>-->
+        <!--<script type="text/javascript" src="{{ static('js/bootstrap.min.js') }}"></script>-->
+        <!-- Explorer canvas, for IE6-8 support of canvas elements -->
+        <!--[if lt IE 9]>
+            <script src="js/excanvas.min.js"></script>
+        <![endif]-->
+       <script type="text/javascript" src="{{ static('js/jquery.flot.min.js') }}"></script>
+        <script type="text/javascript" src="{{ static('js/jquery.flot.resize.min.js') }}"></script>
+        <script type="text/javascript" src="{{ static('js/imperio.general.js') }}"></script>
     <!-- endbuild -->
+    <script type="text/javascript">
+        // When the document is ready
+        $(document).ready(function () {
+            $('#pickup_date').datepicker({
+                format: "mm/dd/yyyy",
+                minDate: 0
+            });  
+        });
+    </script>
+    <script type="text/javascript">
+        // When the document is ready
+        $(document).ready(function () {
+            $('#delivery_date').datepicker({
+                format: "mm/dd/yyyy",
+                minDate: 0
+            });  
+        });
+    </script>
 </body>
 </html>
+
+        
+    
+    
+
