--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'layout.html' %}
 
-{% block body %}
+{% block content %}
 <div class="container" style="margin-top:50px">
     <div class="hero-unit">
         <h1>Wotcha!</h1>
