--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -11,27 +11,27 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Loads <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                      <li><a href="{{ url_for('load.create') }}">New Load</a></li>
+                      <li><a href="#">New Load</a></li>
                       
                       <li class="divider"></li>
-                      <li><a href="{{ url_for('load.all') }}">View All</a></li>
+                      <li><a href="#">View All</a></li>
 
                     </ul>
                 </li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Fleet <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                      <li><a href="{{ url_for('carrier.create_truck') }}">New Truck</a></li>
-                      <li><a href="{{ url_for('carrier.create_driver') }}">New Driver</a></li>
+                      <li><a href="#">New Truck</a></li>
+                      <li><a href="#">New Driver</a></li>
                       <li class="divider"></li>
-                      <li><a href="{{ url_for('carrier.all') }}">View All</a></li>
+                      <li><a href="#">View All</a></li>
 
                     </ul>
                 </li>
                 {% if user.is_authenticated() %}
-                  <li class=""><a href="{{ url_for('static.logout')}}">Logout</a></li>
+                  <li class=""><a href="#">Logout</a></li>
                 {% else %}
-                  <li class=""><a href="{{ url_for('static.login')}}">Login</a></li>
+                  <li class=""><a href="#">Login</a></li>
                 {% endif %}
               </ul>
             </div>
