--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -28,11 +28,11 @@
 
                     </ul>
                 </li>
-                {% if user.is_authenticated() %}
+                {#{% if user.is_authenticated() %}
                   <li class=""><a href="#">Logout</a></li>
                 {% else %}
                   <li class=""><a href="#">Login</a></li>
-                {% endif %}
+                {% endif %}#}
               </ul>
             </div>
           </div>
