--- a/app/templates/load/all.html
+++ b/app/templates/load/all.html
@@ -32,7 +32,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {#{% for load in loads %}#}
+                            {% for load in loads %}
                                 <tr>
                                     <td><a href="#">{{ load.id }}</a></td>
                                     <td>{{ load.lane.origin }}</td>
@@ -49,7 +49,7 @@
                                         {% endif %}#}
                                     </td>
                                 </tr>
-                           {# {% endfor %}#}
+                            {% endfor %}
                         </tbody>
                     </table>
                 </form>
