--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -3,5 +3,6 @@
 
 {% block content %}
   <h1>File Not Found</h1>
+  <p>{{ error }}</p>
   <p><a href="{{ url_for('static.index') }}">Back</a></p>
 {% endblock %}
