--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,5 +1,5 @@
 <!-- extend base layout -->
-{% extends "base.html" %}
+{% extends 'layout.html' %}
 
 {% block content %}
   <h1>An unexpected error has occurred</h1>
