--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -5,5 +5,5 @@
   <h1>An unexpected error has occurred</h1>
   <p>The administrator has been notified. Sorry for the inconvenience!</p>
   <p>{{ error }}</p>
-  <p><a href="{{ url_for('index') }}">Back</a></p>
+  <p><a href="{{ url_for('static.index') }}">Back</a></p>
 {% endblock %}
