--- a/app/templates/load/all.html
+++ b/app/templates/load/all.html
@@ -6,12 +6,56 @@
     <div class="row-fluid">
         <div class="box">
             <div class="box-title">
-                Actions: &nbsp;&nbsp;<a href="#" class="btn btn-primary">New Load</a>
+                Actions: &nbsp;&nbsp;<a href="{{ url_for('load.create') }}" class="btn btn-primary">New Load</a>
             </div>
         </div>
     </div>
 
-    
+    {#<div class="row-fluid">
+        <div class="span12">
+            <div class="box">
+                <div class="box-title">
+                    Pending Load Tenders - TBD
+                </div>
+                <div class="box-content nopadding">
+                    
+                    <table class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Load ID</th>
+                                <th>Origin City</th>
+                                <th>Destination City</th>
+                                <th>Status</th>
+                                <th>Created By</th>
+                                <th>&nbsp</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for load in loads %}
+                                <tr>
+                                    <td><a href="{{ url_for('load.view', load_id=load.id) }}">{{ load.id }}</a></td>
+                                    <td>&nbsp</td>
+                                    <td>&nbsp</td>
+                                    <td>{{ load.status }}</td>
+                                    <td>{{ load.broker.email }}</td>
+                                    <td>
+                                        {% if load.status == "Assigned" %}
+                                            <a href="{{ url_for('load.complete', load_id=load.id)}}" class="btn btn-primary btn-mini ">Complete</a>
+                                        {% elif load.status != "Complete" %}
+                                            <a href="{{ url_for('load.edit', load_id=load.id)}}" class="btn btn-primary btn-mini">Edit</a>
+                                        
+                                            <a href="{{ url_for('load.delete', load_id=load.id)}}" class="btn btn-danger btn-mini delete">Delete</a>
+                                        {% endif %}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </form>
+                </div>
+            </div>
+        </div>
+    </div>#}
     <div class="row-fluid">
         <div class="span12">
             <div class="box">
@@ -34,19 +78,19 @@
                         <tbody>
                             {% for load in loads %}
                                 <tr>
-                                    <td><a href="#">{{ load.id }}</a></td>
+                                    <td><a href="{{ url_for('load.view', load_id=load.id) }}">{{ load.id }}</a></td>
                                     <td>{{ load.lane.origin }}</td>
                                     <td>{{ load.lane.destination }}</td>
-                                    <td><a href="#">{{ load.assigned_driver.get_full_name() }}</td>
+                                    <td><a href="{{ url_for('carrier.view_driver', driver_id=load.assigned_driver.id) }}">{{ load.assigned_driver.get_full_name() }}</td>
                                     <td>{{ load.status }}</td>
                                     <td>
-                                        {#{% if load.status == "Assigned" %}
-                                            <a href="#" class="btn btn-primary btn-mini ">Complete</a>
+                                        {% if load.status == "Assigned" %}
+                                            <a href="{{ url_for('load.complete', load_id=load.id)}}" class="btn btn-primary btn-mini ">Complete</a>
                                         {% elif load.status != "Complete" %}
-                                            <a href="#" class="btn btn-primary btn-mini">Edit</a>
+                                            <a href="{{ url_for('load.edit', load_id=load.id)}}" class="btn btn-primary btn-mini">Edit</a>
                                         
-                                            <a href="#" class="btn btn-danger btn-mini delete">Delete</a>
-                                        {% endif %}#}
+                                            <a href="{{ url_for('load.delete', load_id=load.id)}}" class="btn btn-danger btn-mini delete">Delete</a>
+                                        {% endif %}
                                     </td>
                                 </tr>
                             {% endfor %}
