--- a/app/templates/load/edit.html
+++ b/app/templates/load/edit.html
@@ -341,7 +341,7 @@
 			                    	</div>
 			                    	<div class="form-actions">
 			                        	<input type="submit" class="btn btn-primary" value="Save" />
-			                        	<a href="#" class="btn">Cancel</a>
+			                        	<a href="{{ url_for('load.view', load_id=load.id) }}" class="btn">Cancel</a>
 			                    	</div>
 			                    </div>
 		                	</div>
