--- a/app/templates/load/all.html
+++ b/app/templates/load/all.html
@@ -10,52 +10,6 @@
             </div>
         </div>
     </div>
-
-    {#<div class="row-fluid">
-        <div class="span12">
-            <div class="box">
-                <div class="box-title">
-                    Pending Load Tenders - TBD
-                </div>
-                <div class="box-content nopadding">
-                    
-                    <table class="table table-striped table-bordered">
-                        <thead>
-                            <tr>
-                                <th>Load ID</th>
-                                <th>Origin City</th>
-                                <th>Destination City</th>
-                                <th>Status</th>
-                                <th>Created By</th>
-                                <th>&nbsp</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for load in loads %}
-                                <tr>
-                                    <td><a href="{{ url_for('load.view', load_id=load.id) }}">{{ load.id }}</a></td>
-                                    <td>&nbsp</td>
-                                    <td>&nbsp</td>
-                                    <td>{{ load.status }}</td>
-                                    <td>{{ load.broker.email }}</td>
-                                    <td>
-                                        {% if load.status == "Assigned" %}
-                                            <a href="{{ url_for('load.complete', load_id=load.id)}}" class="btn btn-primary btn-mini ">Complete</a>
-                                        {% elif load.status != "Complete" %}
-                                            <a href="{{ url_for('load.edit', load_id=load.id)}}" class="btn btn-primary btn-mini">Edit</a>
-                                        
-                                            <a href="{{ url_for('load.delete', load_id=load.id)}}" class="btn btn-danger btn-mini delete">Delete</a>
-                                        {% endif %}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </form>
-                </div>
-            </div>
-        </div>
-    </div>#}
     <div class="row-fluid">
         <div class="span12">
             <div class="box">
@@ -81,7 +35,13 @@
                                     <td><a href="{{ url_for('load.view', load_id=load.id) }}">{{ load.id }}</a></td>
                                     <td>{{ load.lane.origin }}</td>
                                     <td>{{ load.lane.destination }}</td>
-                                    <td><a href="{{ url_for('carrier.view_driver', driver_id=load.assigned_driver.id) }}">{{ load.assigned_driver.get_full_name() }}</td>
+                                    <td>
+                                        {% if load.assigned_driver is none %}
+
+                                        {% else %}
+                                            <a href="{{ url_for('carrier.view_driver', driver_id=load.assigned_driver.id) }}">{{ load.assigned_driver.get_full_name() }}
+                                        {% endif %}
+                                    </td>
                                     <td>{{ load.status }}</td>
                                     <td>
                                         {% if load.status == "Assigned" %}
