--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,18 +1,9 @@
-{% extends 'layout.html' %}
+{% extends "layout.html" %}
 
 {% block content %}
-<div class="container" style="margin-top:50px">
-    <div class="hero-unit">
-        <h1>Wotcha!</h1>
-        <p>You now have</p>
-        <ul>
-        	<li>A basic Flask app structure</li>
-            <li>HTML5 Boilerplate</li>
-            <li>Twitter Bootstrap</li>
-            <li>Twitter Bootstrap plugins</li>
-        </ul>
-        <p>installed.</p>
-        <h3>Enjoy coding! - Yeoman (and @romain__berger :p )</h3>
-    </div>
-</div>
+<h2>Test</h2>
+
+
+
+
 {% endblock %}
