--- a/app/templates/static/login.html
+++ b/app/templates/static/login.html
@@ -1,11 +1,13 @@
-{% extends "layout.html" %}
+{% extends "base.html" %}
 
-{% block content %}
+{% block body %}
 <form name="edit" action="" method="post" class="form-horizontal">
 	{{ form.hidden_tag() }}
 	<div class="container-fluid" id="container">
+		<div class="row-fluid">&nbsp;</div>
 		<div class="row-fluid">
-		    <div class="span12">
+			<div class="span4"></div>
+		    <div class="span4">
         		<div class="box">
             		<div class="box-title">
                 		Login
@@ -38,7 +40,8 @@
 	                	</div> 
                 	</div>
             	</div>
-		 	</div>         
+		 	</div>
+		 	<div class="span4"></div>         
 	    </div>
 	</div> 
 </form>
