registration e-mail functionality

--- a/app/templates/static/login.html
+++ b/app/templates/static/login.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "layout.html" %}
 
-{% block body %}
+{% block content %}
 <form name="edit" action="" method="post" class="form-horizontal">
 	{{ form.hidden_tag() }}
 	<div class="container-fluid" id="container">
