--- a/app/templates/static/login.html
+++ b/app/templates/static/login.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 
 {% block content %}
+
+sdfa;lsdkfja;lskdfja;lskdjfa;lskjfal;ksf
 <form name="edit" action="" method="post" class="form-horizontal">
 	{{ form.hidden_tag() }}
 	<div class="container-fluid" id="container">
