--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -6,11 +6,9 @@
 
 {% with messages = get_flashed_messages() %}
 	{% if messages %}
-    	<ul>
     	{% for message in messages %}
-    	    <li>{{ message }} </li>
+    		<div class="alert alert-warning" role="alert">{{ message }}</div>
     	{% endfor %}
-    	</ul>
   	{% endif %}
 {% endwith %}
 {% block content %}{% endblock %}
