--- a/app/templates/load/create.html
+++ b/app/templates/load/create.html
@@ -295,15 +295,6 @@
 			                        	</div>
 			                    	</div>
 			                    	<div class="control-group">
-			                        	<label class="control-label">Trailer Group</label>
-			                        	<div class="controls">
-			                           		{{ form.trailer_group() }}
-	                                        {% for error in form.trailer_group.errors %}
-            									<span style="color: red;">[{{ error }}]</span>
-          									{% endfor %}
-			                        	</div>
-			                    	</div>
-			                    	<div class="control-group">
 			                        	<label class="control-label">Trailer Type</label>
 			                        	<div class="controls">
 			                           		{{ form.trailer_type() }}
@@ -348,7 +339,38 @@
 		            	</div>
 		         	</div>         
 		        </div>
-		    </div> 
+		    </div>
+
+
+		    <div class="row-fluid">
+		    		<div class="span12">
+		        		<div class="box">
+		            		<div class="box-title">
+		                		Origin
+		            		</div>
+		            		<div class="box-content nopadding">
+			                	<div class="form-horizontal">
+			                		{% for f in form.locations %}
+			                    	<div class="control-group">
+			                        	<label class="control-label">{{ f.address1.label }}</label>
+			                        	<div class="controls">
+			                           		{{ f.address1(size=50) }}
+			                           		{% for error in f.address1.errors %}
+            									<span style="color: red;">[{{ error }}]</span>
+          									{% endfor %}
+	                                        <!--<span class="help-inline">Description goes here</span>-->
+			                        	</div>
+			                    	</div>
+			                    	{% endfor %}
+			                	</div> 
+		                	</div>
+		            	</div>
+		            </div>      
+		        </div>
+		    </div>
+
+
+
 		</div>
 	</div>
 </form>
