--- a/app/templates/load/view.html
+++ b/app/templates/load/view.html
@@ -9,7 +9,25 @@
 	<div class="row-fluid">
 		<div class="box">
 			<div class="box-title">
-				Actions: &nbsp;&nbsp;<a href="{{ url_for('load.edit', load_id=load.id) }}" class="btn btn-primary">Edit</a>
+
+				
+						
+					Actions: &nbsp;&nbsp;<a href="{{ url_for('load.edit', load_id=load.id) }}" class="btn btn-primary">Edit</a>
+					
+					<div class="pull-right">
+						{% if load.status != "Pending Truck Assignment" %}
+							<form name="edit" action="" method="post" class="form-horizontal">
+								{{ status_form.hidden_tag() }}
+								<div class="control-group">
+			                   		<label class="control-label"><b>Load Status:</b></label>
+			                   		<div class="controls">
+			                   			{{ status_form.status() }}
+			                   			<input type="submit" class="btn btn-primary" value="Update Status" />
+			                   		</div>
+			                	</div>
+	                   		</form>
+		                {% endif %}
+	                </div>
 			</div>
 		</div>
 	</div>
@@ -71,7 +89,7 @@
 							</div>
 						</div>
 					{% endif %}
-	         		{% if load.status == "Assigned" or load.status == "Complete" or load.status == "Pending Truck Assignment"  %}
+	         		{% if load.carrier is not none  %}
 	         			<div class="span6">
 			        		<div class="box">
 			            		<div class="box-title">
@@ -106,7 +124,7 @@
 					                    	</div>
 				                		{% endif %}
 				                	
-					                	{% if load.status == "Assigned" or load.status == "Complete" %}
+					                	{% if load.assigned_driver is not none %}
 						                	<div class="control-group">
 					                        	<label class="control-label">Truck</label>
 					                        	<div class="controls">
@@ -134,7 +152,7 @@
 		                	</div>
 		            	</div>
 					{% endif %}
-					{% if (is_dispatch and load.status != "Assigned" and load.status != "Complete") or (not is_dispatch and load.status != "Pending Truck Assignment" and load.status != "Assigned" and load.status != "Complete") %}
+					{% if is_dispatch and load.assigned_driver is none %}
 						<div class="span6">
 			        		{#<div class="box">
 			        			<div class="box-title">
@@ -153,8 +171,8 @@
 			            			<table id="datatable" class="table table-striped table-bordered">
 			            				<thead>
 			            					<tr>
-			            						<th>Icon #</th>
-			            						<th>Name</th>
+			            						<th>Truck</th>
+			            						<th>Driver</th>
 			            						{% if not is_dispatch %}
 			            							<th>Quote</th>
 			            						{% endif %}
@@ -175,8 +193,8 @@
 			 									{% endfor %}
 			 									{% for bid in requested_bids %}
 			 										<tr class="odd gradeX">
-				 										<td>1</td>
 				 										<td>{{ bid.offered_to.email }}</td>
+				 										<td></td>
 				 										<td></td>
 				 										<td>
 			       			 								Requested Bid
@@ -195,7 +213,6 @@
 				 								{% endfor %}
 			 									{% for bid in rejected_bids %}
 			 										<tr class="odd gradeX">
-				 										<td>2</td>
 				 										<td>{{ bid.offered_by.email }}</td>
 				 										<td>N/a</td>
 				 										<td>
@@ -206,15 +223,21 @@
 			 								{% else %}
 				 								{% for carrier in carriers %}
 				 								<tr class="odd gradeX">
-				 									<td>{{ carrier.id }}</td>
 				 									<td><a href="{{ url_for('carrier.view_truck', truck_id=carrier.id) }}">{{ carrier.name }}</a></td>
+				 									<td>
+				 											{% if carrier.driver is none %}
+				 												Unassigned
+				 											{% else %}
+				 												<a href="{{ url_for('carrier.view_driver', driver_id=carrier.driver.id) }}">{{ carrier.driver.get_full_name() }}</a>
+				 											{% endif %}
+				 									</td>
 				 									{% if not is_dispatch %}
 				 										<td>{{ bid.value }}</td>
 				 									{% endif %}
 				 									
 				 									<td>
-				 										{% if load.status == "Pending Truck Assignment" and is_dispatch %}
-			       			 							<a href="{{ url_for('load.assign', load_id=load.id, assign_id=carrier.id)}}" onclick="return confirm("Assign this carrier to this load?")text" class="btn btn-success btn-mini success">Assign</a>
+				 										{% if is_dispatch and load.assigned_driver is none %}
+			       			 								<a href="{{ url_for('load.assign', load_id=load.id, assign_id=carrier.id)}}" onclick="return confirm("Assign this carrier to this load?")text" class="btn btn-success btn-mini success">Assign</a>
 			       			 							{% endif %}
 			                                        </td>
 				 								</tr>
@@ -281,12 +304,16 @@
 	</div>
 </div>
 <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
-  <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
-<script>
-$(function(){
-    $("#datatable").dataTable();
-  })
-</script>
+  {#<script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>#}
+	<script>
+		$(document).ready(function() {
+	    	$('#datatable').dataTable( {
+	    		"oLanguage": {
+	    			"sEmptyTable": "No applicable trucks for this load"
+	    		}
+	    	});
+	    });
+	</script>
 
 
 {% endblock %}
