--- a/app/templates/static/index.html
+++ b/app/templates/static/index.html
@@ -620,21 +620,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-6">
-							<h2 style="text-align: right;">About Us</h2>
+							<h2 style="text-align: right;">Load Planning and Dispatching, redefined</h2>
 							<hr class="fade-left">
 							<p style="text-align: right;">
-								Lorem ipsum dolor sit amet, consectetuer <strong>adipiscing elit</strong>. Aenean commodo ligula eget dolor. Aenean massa.
+								21<super>st</super> century business solutions for carriers who operate 20 or fewer trucks
 							</p>
 							<p style="text-align: right;">
-								Nulla consequat massa quis enim.
-								<br>
-								Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
-								<br>
-								In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
-								<br>
-								Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
-								<br>
-								Aenean <strong style="text-align: right;">vulputate</strong> eleifend tellus.
+								It is estimated that 97% of carriers in the United States operate 20 or fewer trucks, but these firms lack dedicated and affordable technology solutions to drive greater business value in the 21<super>st</super> century. The trucking industry grew up with America, but small firms have mssed the wave of technology. Tron Logistics has developed software specifically for this market to fill the gap. Stay in teh know by signing up to our e-mail list.
 							</p>
 							<hr class="fade-left">
 							<a href="#" class="btn btn-default pull-right"><i class="fa fa-info"></i> Learn more...</a>
