--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,6 +31,7 @@
         <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
         <link rel="stylesheet" type="text/css" href="{{ static('backend/plugins/select2/select2.css') }}" />
         <link rel="stylesheet" href="{{ static('backend/plugins/DataTables/media/css/DT_bootstrap.css') }}" />
+        <link rel="stylesheet" href="{{ static('backend/plugins/datepicker/css/datepicker.css') }}">
         <!--[if IE 7]>
         {#<link rel="stylesheet" href="{{ static('backend/plugins/font-awesome/css/font-awesome-ie7.min.css') }}">#}
         <![endif]-->
