--- a/app/templates/load/create2.html
+++ b/app/templates/load/create2.html
@@ -150,11 +150,14 @@
 										<thead>
 											<tr>
 												<th>Stop #</th>
-												<th>Type</h>
 												<th>Street Address</th>
 												<th>City</th>
 												<th>State</th>
 												<th>Zip</th>
+												<th>Pickup Weight</th>
+												<th>Delivery Weight</th>
+												<th>Arrival Date</th>
+												<th>Arrival Time</th>
 												<th>Delete</th>
 											</tr>
 										</thead>
@@ -210,10 +213,25 @@
 		<script src="{{ static('backend/js/main.js') }}"></script>
 		<!-- end: MAIN JAVASCRIPTS -->
 		<!-- start: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
+		<script src="{{ static('backend/plugins/jquery-inputlimiter/jquery.inputlimiter.1.3.1.min.js') }}"></script>
 		<script src="{{ static('backend/plugins/jquery-validation/dist/jquery.validate.min.js') }}"></script>
 		<script src="{{ static('backend/plugins/jQuery-Smart-Wizard/js/jquery.smartWizard.js') }}"></script>
 		<script src="{{ static('backend/js/form-wizard.js') }}"></script>
+		<script src="{{ static('backend/plugins/autosize/jquery.autosize.min.js') }}"></script>
+		<script src="{{ static('backend/plugins/select2/select2.min.js') }}"></script>
+		<script src="{{ static('backend/plugins/jquery.maskedinput/src/jquery.maskedinput.js') }}"></script>
+		<script src="{{ static('backend/plugins/jquery-maskmoney/jquery.maskMoney.js') }}"></script>
+		<script src="{{ static('backend/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js') }}"></script>
+		<script>
+		$( document ).on( "focus", "input.date-picker", function() {
 
+			$('.date-picker').datepicker({
+		            autoclose: true,
+		            format: "mm/dd/yyyy",
+					minDate: 0
+		        });
+		}); 
+		</script>
 		
 		<!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
 
