--- a/app/templates/static/coming_soon.html
+++ b/app/templates/static/coming_soon.html
@@ -96,7 +96,7 @@
 						<h2>Load Planning and Dispatching, redefined</h2>
 						<hr>
 						<p>
-						It is estimated that 97% of carriers in the United States operate 20 or fewer trucks, but these firms lack dedicated and affordable technology solutions to drive greater business value in the 21<super>st</super> century. The trucking industry grew up with America, but small firms have missed the wave of technology. Tron Logistics has developed software specifically for this market to fill the gap. Stay in the know by signing up for our e-mail list.</p>
+						It is estimated that 97% of carriers in the United States operate 20 or fewer trucks, but these firms lack dedicated and affordable technology solutions to drive greater business value in the 21<sup>st</sup> century. The trucking industry grew up with America, but small firms have missed the wave of technology. Tron Logistics has developed software specifically for this market to fill the gap. Stay in the know by signing up for our e-mail list.</p>
 					</div>
 				</div>
 			</div>
