--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -30,7 +30,7 @@
 
 
 
-		<!-- start: MAIN JAVASCRIPTS -->
+		{#<!-- start: MAIN JAVASCRIPTS -->
 		<!--[if lt IE 9]>
 		<script src="{{ static('backend/plugins/respond.min.js') }}"></script>
 		<script src="{{ static('backend/plugins/excanvas.min.js') }}"></script>
@@ -49,7 +49,7 @@
 		<script src="{{ static('backend/plugins/less/less-1.5.0.min.js') }}"></script>
 		<script src="{{ static('backend/plugins/jquery-cookie/jquery.cookie.js') }}"></script>
 		<script src="{{ static('backend/plugins/bootstrap-colorpalette/js/bootstrap-colorpalette.js') }}"></script>
-		<script src="{{ static('backend/js/main.js') }}"></script>
+		<script src="{{ static('backend/js/main.js') }}"></script>#}
 		<!-- end: MAIN JAVASCRIPTS -->
 		<!-- start: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
 		<script src="{{ static('backend/plugins/flot/jquery.flot.js') }}"></script>
