--- a/app/templates/load/all.html
+++ b/app/templates/load/all.html
@@ -70,7 +70,6 @@
         </div>
     </div>
 
-
-<script type="text/javascript" src="{{ static('backend/js/jquery.dataTables.min.js') }}"></script>
+{% include "partials/main_javascripts.html" %}
 
             {% endblock %}
