--- a/app/templates/carrier/driver/create.html
+++ b/app/templates/carrier/driver/create.html
@@ -29,7 +29,14 @@
 							{{ form.last_name(size=50, placeholder="Last Name", class="form-control") }}
 						</div>
 					</div>
-					
+					<div class="form-group">
+						<label class="col-sm-3 control-label" for="origin_address1">
+							Email
+						</label>
+						<div class="col-sm-9">
+							{{ form.email(size=50, placeholder="Last Name", class="form-control") }}
+						</div>
+					</div>
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="origin_address1">
 							Phone Number
@@ -57,5 +64,6 @@
 	</div>
 </form>
 
+{% include "partials/main_javascripts.html" %}
 
 {% endblock %}
