--- a/app/templates/load/create.html
+++ b/app/templates/load/create.html
@@ -1,321 +1,229 @@
 {% extends "layout.html" %}
 
 {% block content %}
-
-<form name="create" role="form" action="" method="post" class="form-horizontal" id="form">
+<form name="create" action="" role="form" class="smart-wizard form-horizontal" id="form" method="post">
 	{{ form.hidden_tag() }}
-	<div class="row">
-		<div class="col-sm-6">
-			<!-- start: TEXT FIELDS PANEL -->
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<i class="fa fa-external-link-square"></i>
-					Origin
-				</div>
-				<div class="panel-body">
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Street Address
-						</label>
-						<div class="col-sm-9">
-							{{ form.origin_address1(size=50, placeholder="Street Address", class="form-control") }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							City
-						</label>
-						<div class="col-sm-9">
-							{{ form.origin_city(size=50, placeholder="City", class="form-control") }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							State
-						</label>
-						<div class="col-sm-9">
-							{{ form.origin_state(size=50, placeholder="State", class="form-control") }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Zip Code
-						</label>
-						<div class="col-sm-9">
-							{{ form.origin_postal_code(size=50, placeholder="Zip Code", class="form-control") }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Pickup Date
-						</label>
-						<div class="col-sm-9">
-							{{ form.pickup_date() }}
-						</div>
-					</div>
-					<hr>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Contact Name
-						</label>
-						<div class="col-sm-9">
-							{{ form.origin_contact_name() }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Contact Email
-						</label>
-						<div class="col-sm-9">
-							{{ form.origin_contact_email() }}
-						</div>
-					</div>
-					<div class="control-group">
-		            	<label class="col-sm-3 control-label" for="origin_address1">
-							Contact Phone
-						</label>
-		            	<div class="col-sm-9">
-		               		+1 ({{ form.origin_contact_phone_area_code(size=3, class='input-mini') }})-{{ form.origin_contact_phone_prefix(size=3, class='input-mini') }}-{{ form.origin_contact_phone_line_number(size=4, class='input-mini') }}
-		            	</div>
-	        		</div>
-	        	</div>
-	        </div>
-	    </div>
-	    <div class="col-sm-6">
-			<!-- start: TEXT FIELDS PANEL -->
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<i class="fa fa-external-link-square"></i>
-					Origin
-				</div>
-				<div class="panel-body">
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Street Address
-						</label>
-						<div class="col-sm-9">
-							{{ form.destination_address1(size=50, placeholder="Street Address", class="form-control") }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							City
-						</label>
-						<div class="col-sm-9">
-							{{ form.destination_city(size=50, placeholder="City", class="form-control") }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							State
-						</label>
-						<div class="col-sm-9">
-							{{ form.destination_state(size=50, placeholder="State", class="form-control") }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Zip Code
-						</label>
-						<div class="col-sm-9">
-							{{ form.destination_postal_code(size=50, placeholder="Zip Code", class="form-control") }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Delivery Date
-						</label>
-						<div class="col-sm-9">
-							{{ form.delivery_date() }}
-						</div>
-					</div>
-					<hr>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Contact Name
-						</label>
-						<div class="col-sm-9">
-							{{ form.destination_contact_name() }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Contact Email
-						</label>
-						<div class="col-sm-9">
-							{{ form.destination_contact_email() }}
-						</div>
-					</div>
-					<div class="control-group">
-		            	<label class="col-sm-3 control-label" for="origin_address1">
-							Contact Phone
-						</label>
-		            	<div class="col-sm-9">
-		               		+1 ({{ form.destination_contact_phone_area_code(size=3, class='input-mini') }})-{{ form.destination_contact_phone_prefix(size=3, class='input-mini') }}-{{ form.destination_contact_phone_line_number(size=4, class='input-mini') }}
-		            	</div>
-	        		</div>
-	        	</div>
-	        </div>
-	    </div>
-	</div>
+	<!-- start: PAGE CONTENT -->
 	<div class="row">
 		<div class="col-sm-12">
-			<!-- start: TEXT FIELDS PANEL -->
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<i class="fa fa-external-link-square"></i>
-					Load Details
+			<!-- start: FORM WIZARD PANEL -->
+			<div id="wizard" class="swMain">
+				<ul>
+					<li>
+						<a href="#step-1">
+							<div class="stepNumber">
+								1
+							</div>
+							<span class="stepDesc"> Step 1
+								<br />
+								<small>General Information</small> </span>
+						</a>
+					</li>
+					<li>
+						<a href="#step-2">
+							<div class="stepNumber">
+								2
+							</div>
+							<span class="stepDesc"> Step 2
+								<br />
+								<small>Lane(s)</small> </span>
+						</a>
+					</li>
+				</ul>
+				<div class="progress progress-striped active progress-sm">
+					<div aria-valuemax="100" aria-valuemin="0" role="progressbar" class="progress-bar progress-bar-success step-bar">
+						<span class="sr-only"> 0% Complete (success)</span>
+					</div>
 				</div>
-				<div class="panel-body">
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Description
-						</label>
-						<div class="col-sm-9">
-							{{ form.description(size=250, placeholder="Description", class="form-control") }}
+				<div id="step-1">
+					<h2 class="StepTitle">Step 1 Content</h2>
+					<hr>
+					<div class="row">
+						<div class="col-sm-5">
+							<div class="form-group">
+								<label class="col-sm-3 control-label">
+									Load Type <span class="symbol required"></span>
+								</label>
+								<div class="col-sm-7">
+									{{ form.load_type(class="form-control") }}
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">
+									Required Trailer <span class="symbol required"></span>
+								</label>
+								<div class="col-sm-7">
+									{{ form.trailer_type(class="form-control") }}
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">
+									Total Miles <span class="symbol required"></span>
+								</label>
+								<div class="col-sm-7">
+									{{ form.total_miles(class="form-control", placeholder="Total Miles") }}
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">
+									Cost <span class="symbol required"></span>
+								</label>
+								<div class="col-sm-7">
+									{{ form.price(class="form-control", placeholder="Price") }}
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-5">
+							<div class="form-group">
+								<label class="col-sm-3 control-label">
+									# Pieces <span class="symbol required"></span>
+								</label>
+								<div class="col-sm-7">
+									{{ form.number_pieces(class="form-control", placeholder="Number of Pieces") }}
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">
+									Over Dimensional? 
+								</label>
+								<div class="col-sm-7">
+									{{ form.over_dimensional() }}
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">
+									Comments <span class="symbol required"></span>
+								</label>
+								<div class="col-sm-7">
+									{{ form.comments(class="form-control", placeholder="Number of Pieces") }}
+								</div>
+							</div>
+						</div>	
+					</div>
+					<hr>
+					<div class="row">
+						<div class="col-sm-10">
+							<div class="form-group">
+								<label class="col-sm-3 control-label">
+									Load Description
+								</label>
+								<div class="col-sm-7">
+									{{ form.description(class="autosize form-control", style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 69px;") }}
+								</div>
+							</div>
 						</div>
 					</div>
+					<hr>
 					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Purchase Order
-						</label>
-						<div class="col-sm-9">
-							{{ form.purchase_order(placeholder="Purchase Order", class="form-control") }}
+						<div class="col-sm-3 col-sm-offset-7">
+							<button class="btn btn-blue next-step btn-block">
+								Next <i class="fa fa-arrow-circle-right"></i>
+							</button>
 						</div>
 					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Over Dimensional?
-						</label>
-						<div class="col-sm-9">
-							{{ form.over_dimensional() }}
+				</div>
+				<div id="step-2">
+					<h2 class="StepTitle">Step 2 Content</h2>
+					<div class="col-md-12">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<i class="fa fa-external-link-square"></i>
+								Editable Table
+								<div class="panel-tools">
+									<a class="btn btn-xs btn-link panel-collapse collapses" href="#"> </a>
+									<a class="btn btn-xs btn-link panel-config" href="#panel-config" data-toggle="modal"> <i class="fa fa-wrench"></i> </a>
+									<a class="btn btn-xs btn-link panel-refresh" href="#"> <i class="fa fa-refresh"></i> </a>
+									<a class="btn btn-xs btn-link panel-expand" href="#"> <i class="fa fa-resize-full"></i> </a>
+									<a class="btn btn-xs btn-link panel-close" href="#"> <i class="fa fa-times"></i> </a>
+								</div>
+							</div>
+							<div class="panel-body">
+								<div class="row">
+									<div class="col-md-12 space20">
+										<button class="btn btn-green add-row">
+											Add New <i class="fa fa-plus"></i>
+										</button>
+									</div>
+								</div>
+								<div class="table-responsive">
+									<table class="table table-striped table-hover" id="sample_2">
+										<thead>
+											<tr>
+												<th>Stop #</th>
+												<th>Street Address</th>
+												<th>City</th>
+												<th>State</th>
+												<th>Zip</th>
+												<th>Pickup Weight</th>
+												<th>Delivery Weight</th>
+												<th>Arrival Date</th>
+												{#<th>Arrival Time</th>#}
+												<th>Delete</th>
+											</tr>
+										</thead>
+										<tbody>
+											<!--- Content created by table-data.js -->
+										</tbody>
+									</table>
+								</div>
+							</div>
 						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Weight
-						</label>
-						<div class="col-sm-9">
-							{{ form.weight(size=50, placeholder="Weight", class="form-control") }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Length
-						</label>
-						<div class="col-sm-9">
-							{{ form.dim_length() }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Width
-						</label>
-						<div class="col-sm-9">
-							{{ form.dim_width() }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Height
-						</label>
-						<div class="col-sm-9">
-							{{ form.dim_height() }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Number of Pieces
-						</label>
-						<div class="col-sm-9">
-							{{ form.number_pieces() }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Comments
-						</label>
-						<div class="col-sm-9">
-							{{ form.comments() }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Trailer Type
-						</label>
-						<div class="col-sm-9">
-							{{ form.trailer_type() }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Load Type
-						</label>
-						<div class="col-sm-9">
-							{{ form.load_type() }}
-						</div>
-					</div>
 
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Total Miles
-						</label>
-						<div class="col-sm-9">
-							{{ form.total_miles() }}
-						</div>
 					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Total Price
-						</label>
-						<div class="col-sm-9">
-							{{ form.price() }}
-						</div>
-					</div>
+					<hr>
 					<div class="form-group">
 						<div class="col-sm-2 col-sm-offset-3">
 							<button class="btn btn-light-grey back-step btn-block">
-								<i class="fa fa-circle-arrow-left"></i> Cancel
+								<i class="fa fa-circle-arrow-left"></i> Back
 							</button>
 						</div>
 						<div class="col-sm-2 col-sm-offset-3">
-							<button type="submit" class="btn btn-blue next-step btn-block">
-								Submit <i class="fa fa-arrow-circle-right"></i>
+							<button type="submit" class="btn btn-success btn-block">
+								Finish <i class="fa fa-arrow-circle-right"></i>
 							</button>
 						</div>
 					</div>
-	        	</div>
-	        </div>
-	    </div>
+				</div>
+			</div>							
+			<!-- end: FORM WIZARD PANEL -->
+		</div>
 	</div>
-	
 </form>
-				
-	<script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
-	<script type="text/javascript">
-		// When the document is ready
-		$(document).ready(function () {
-			$('#pickup_date').datepicker({
-				format: "mm/dd/yyyy",
-				minDate: 0
-			});
-		});
-	</script>
-
-	<script type="text/javascript">
-		// When the document is ready
-		$(document).ready(function () {
-			$('#delivery_date').datepicker({
-				format: "mm/dd/yyyy",
-				minDate: 0
-			});
-		});
-	</script>
-
-<script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
-
-	
 
 
+		<!-- end: RIGHT SIDEBAR -->
+{% include "partials/main_javascripts.html" %}
+		<!-- start: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
+		<script src="{{ static('backend/plugins/jquery-inputlimiter/jquery.inputlimiter.1.3.1.min.js') }}"></script>
+		<script src="{{ static('backend/plugins/jquery-validation/dist/jquery.validate.min.js') }}"></script>
+		<script src="{{ static('backend/plugins/jQuery-Smart-Wizard/js/jquery.smartWizard.js') }}"></script>
+		<script src="{{ static('backend/js/form-wizard.js') }}"></script>
+		<script src="{{ static('backend/plugins/autosize/jquery.autosize.min.js') }}"></script>
+		<script src="{{ static('backend/plugins/select2/select2.min.js') }}"></script>
+		<script src="{{ static('backend/plugins/jquery.maskedinput/src/jquery.maskedinput.js') }}"></script>
+		<script src="{{ static('backend/plugins/jquery-maskmoney/jquery.maskMoney.js') }}"></script>
+		<script src="{{ static('backend/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js') }}"></script>
+		
+		{#<script>
+			$(document).on('focus',".date-picker", function(){
+			    $(this).datepicker();
+			});​
+		</script>#}
+		<script>
+		$( document ).on( "focus", "input.date-picker", function() {
+			$('.date-picker').datepicker({
+		            autoclose: true,
+		            format: "mm/dd/yyyy",
+					minDate: 0
+		        });
+		}); 
+		</script>
+		
+		<!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
 
-{% endblock %}
+<!-- start: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
+		
+		<!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
+
+		
+				{% endblock %}
