--- a/app/templates/partials/header.html
+++ b/app/templates/partials/header.html
@@ -21,10 +21,8 @@
 
 
 
-                <a href="#">
-					<img src="{{ static('backend/img/logo.png') }}" alt="" />
-				</a>
-				
+
+				<h1>Tron Logistics</h1>
 				<div class="hright">
 					<div id="search" class="column">
 						<div class="search">
