--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -11,11 +11,11 @@
           <!-- end: RESPONSIVE MENU TOGGLER -->
           <!-- start: LOGO -->
           <a class="navbar-brand" href="index.html">
-            CLIP<i class="clip-clip"></i>ONE
+            Tron Logistics
           </a>
           <!-- end: LOGO -->
         </div>
-        <div class="navbar-tools">
+        {#<div class="navbar-tools">
           <!-- start: TOP NAVIGATION MENU -->
           <ul class="nav navbar-right">
             <!-- start: TO-DO DROPDOWN -->
@@ -374,7 +374,7 @@
             <!-- end: PAGE SIDEBAR TOGGLE -->
           </ul>
           <!-- end: TOP NAVIGATION MENU -->
-        </div>
+        </div>#}
       </div>
       <!-- end: TOP NAVIGATION CONTAINER -->
     </div>
