--- a/app/templates/carrier/driver/view.html
+++ b/app/templates/carrier/driver/view.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 
 {% block content %}
-		<div class="row-fluid">
+		{#<div class="row-fluid">
 			<div class="box">
 				<div class="box-title">
 					Actions: &nbsp;&nbsp;<a href="{{ url_for('drivers.edit', driver_id=driver.id) }}" class="btn btn-primary">Edit</a>
 				</div>
 			</div>
-		</div>
+		</div>#}
 
 	<div class="col-sm-12">
     	<div class="panel panel-default">
