--- a/app/templates/carrier/all.html
+++ b/app/templates/carrier/all.html
@@ -3,12 +3,12 @@
 {% block content %}
 
 <div class="container-fluid" id="container">
-    <div class="row-fluid">
+    {#<div class="row-fluid">
         <div class="box">
             <div class="box-title">
                 Actions: &nbsp;&nbsp;<a href="{{ url_for('trucks.create') }}" class="btn btn-primary">New Truck</a> &nbsp;&nbsp; <a href="{{ url_for('drivers.create') }}" class="btn btn-primary">New Driver</a>
             </div>
-        </div>
+        </div>#}
     </div>
     <div class="row-fluid">
         <div class="span12">
