--- a/app/templates/carrier/truck/view.html
+++ b/app/templates/carrier/truck/view.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 
 {% block content %}
-	<div class="row-fluid">
+	{#<div class="row-fluid">
 		<div class="box">
 			<div class="box-title">
 				Actions: &nbsp;&nbsp;<a href="{{ url_for('trucks.edit', truck_id=truck.id) }}" class="btn btn-primary">Edit</a>
 			</div>
 		</div>
-	</div>
+	</div>#}
 	<div class="row-fluid">
 	    <div class="col-sm-6">
 	    	<div class="panel panel-default">
@@ -50,7 +50,7 @@
 			<div class="panel panel-default">
 	    		<div class="panel-heading">
 	        		<i class="fa fa-external-link-square"></i>
-	        		DRIVER
+	        		Driver
 	        
 	    		</div>
 	    	<div class="panel-body">
@@ -59,7 +59,7 @@
 						<tbody>
 							<tr>
 								<td><b>Name:</b></td>
-								<td>{{ truck.diver.get_full_name() }}
+								<td>{{ truck.driver.get_full_name() }}
 							</tr>
 							<tr>
 								<td><b>Phone:</b></td>
