Load editting/saving

--- a/app/templates/load/create.html
+++ b/app/templates/load/create.html
@@ -39,12 +39,12 @@
 					<h2 class="StepTitle">Step 1 Content</h2>
 					<hr>
 					<div class="row">
-						<div class="col-sm-5">
+						<div class="col-sm-10">
 							<div class="form-group">
-								<label class="col-sm-3 control-label">
+								<label class="col-sm-5 control-label">
 									Load Type <span class="symbol required"></span>
 								</label>
-								<div class="col-sm-7">
+								<div class="col-sm-5">
 									{{ form.load_type(class="form-control") }}
 								</div>
 							</div>
@@ -73,7 +73,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-5">
+						{#<div class="col-sm-5">
 							<div class="form-group">
 								<label class="col-sm-3 control-label">
 									# Pieces <span class="symbol required"></span>
@@ -98,7 +98,7 @@
 									{{ form.comments(class="form-control", placeholder="Number of Pieces") }}
 								</div>
 							</div>
-						</div>	
+						</div>#}
 					</div>
 					<hr>
 					<div class="row">
